# Flask-login

./: pyproject.toml
myproject/: __init__.py  app.py  forms.py  models.py
myproject/templates/: base.html  home.html  login.html  register.html
