[tool.poetry]
name = "flask-login"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
bcrypt = "^3.2.0"
SQLAlchemy = "^1.3.22"
Flask-Migrate = "^2.6.0"
Werkzeug = "^1.0.1"
Flask-WTF = "^0.14.3"
WTForms = "^2.3.3"
bootstrap4 = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
